# visual_odometry_points

./: .gitignore  CMakeLists.txt  README.md  kitti-odom-eval  vop.cpp  vop.h
back/: vop_bk1.cpp
data/: seq00  seq_00  seq_02  seq_05  seqs
dep/: sophus
log/: pose_log_seq02.txt  pose_log_seq05.txt  seq_02.txt  seq_05.txt
mvslam/: vop.cpp  vop.h  vop_test.cpp
ros/: env.sh  run.sh
ros/mslam_ros/: CMakeLists.txt  package.xml
ros/mslam_ros/launch/: test.launch
ros/mslam_ros/worlds/: test_room.world
ros/mvslam_ros/: CMakeLists.txt
ros/mvslam_ros/launch/: test.launch
ros/mvslam_ros/node/: CMakeLists.txt  mvslam  mvslam_node.cpp  mvslam_node.h
ros/rosws/devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
ros/rosws/devel/lib/pkgconfig/: mslam_ros.pc
ros/rosws/devel/share/mslam_ros/cmake/: mslam_rosConfig.cmake
ros/rosws/src/: mslam_ros  mvslam_ros
