<?xml version="1.0"?>
<package format="2">
  <name>mvslam_ros</name>
  <version>1.3.2</version>
  <description>
    Mini Visual SLAM
  </description>
  <license>Apache 2.0</license>
  <author email="s@some-where.com">Some One</author>
  <maintainer email="s@some-company.com">Some Body</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo</exec_depend>
  <export>
    <gazebo_ros gazebo_media_path="${prefix}"/>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>
</package>
